# artefact-mcp-server

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  Dockerfile  LICENSE  Procfile  README.md  llms-install.md  llms.txt  manifest.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
src/artefact_mcp/: __init__.py  server.py
src/artefact_mcp/core/: __init__.py  hubspot_client.py  icp_scorer.py  license.py  rfm_scorer.py  segmenter.py
src/artefact_mcp/resources/: __init__.py  methodology.py
src/artefact_mcp/tools/: constraints.py  engines.py  gtm_commits.py  icp.py  pipeline.py  rfm.py  signals.py
tests/: test_constraints.py  test_engines.py  test_gtm_commits.py  test_hubspot_client.py  test_icp_tool.py  test_license.py  test_pipeline_tool.py  test_rfm_tool.py  test_signals.py
