[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artefact-mcp"
version = "0.1.1"
description = "Methodology-driven MCP server for revenue intelligence: RFM analysis, 14.5-point ICP scoring, pipeline health scoring, and HubSpot integration"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    { name = "Artefact Ventures", email = "alex@artefactventures.com" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "revenue-intelligence",
    "hubspot",
    "rfm-analysis",
    "icp-scoring",
    "pipeline-health",
    "b2b",
    "crm",
    "ai-tools",
    "llm-tools",
    "claude",
    "sales-intelligence",
    "customer-scoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0,<3.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/alexboissAV/artefact-mcp-server"
Documentation = "https://github.com/alexboissAV/artefact-mcp-server#readme"
Repository = "https://github.com/alexboissAV/artefact-mcp-server"
Issues = "https://github.com/alexboissAV/artefact-mcp-server/issues"
Changelog = "https://github.com/alexboissAV/artefact-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
artefact-mcp = "artefact_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/artefact_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
